--- a/src/app/elements/card-obras/card-obras.component.html
+++ b/src/app/elements/card-obras/card-obras.component.html
@@ -1,7 +1,7 @@
-        <div class="card premag-margin-bottom-20">
+        <div class="card premag-xl-margin-bottom-20">
             <img class="card-img-top" src="{{obras.imagem}}" alt="{{obras.alt}}">
             <div class="card-body premag-padding-top-40 premag-padding-bottom-40">
-                <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11"> {{obras.titulo}}</h5>
+                <h5 class="card-title premag-font-14 premag-xl-margin-bottom-20 color-c11"> {{obras.titulo}}</h5>
                 <p class="card-text premag-font-14">
                     <span class="premag-font-weight-600">LOCAL:</span> {{obras.local}}<br>
                     <span class="premag-font-weight-600">ANO:</span> {{obras.ano}}<br>
