--- a/src/app/elements/counter/counter.component.html
+++ b/src/app/elements/counter/counter.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-row align-items-center justify-content-between premag-margin-top-80 premag-margin-bottom-80 premag-secondary-font">
+<div class="d-flex flex-row align-items-center justify-content-between premag-xl-margin-top-80 premag-xl-margin-bottom-80 premag-secondary-font">
     <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
         <p id="contadorPonte"><ngx-animated-counter [params]="paramsPontes"></ngx-animated-counter></p>
         <p>Pontes</p>
