--- a/src/app/elements/footer/footer.component.html
+++ b/src/app/elements/footer/footer.component.html
@@ -1,15 +1,15 @@
 <div class="premag-footer background-color-c13 color-c8" id="premag-footer">
     <div class="container">
         <div class="row">
-            <div class="col col-lg-8 premag-margin-top-40">
+            <div class="col col-lg-8 col-xl-6 premag-xl-margin-top-40">
                 <img src="../../../assets/images/logo-premag-2.png" alt="Logo Premag">
-                <p class="premag-margin-top-40"><span class="premag-color-05">PREMAG</span>, a experiência concreta. Pré-fabrica, transporta e monta tabuleiros de pontes, viadutos e passarelas em concreto pré-fabricado e protendido desde 1975.</p>
+                <p class="premag-xl-margin-top-40"><span class="premag-color-05">PREMAG</span>, a experiência concreta. Pré-fabrica, transporta e monta tabuleiros de pontes, viadutos e passarelas em concreto pré-fabricado e protendido desde 1975.</p>
             </div>
-            <div class="col premag-margin-top-120 premag-margin-left-40 premag-links-rapidos">
+            <div class="col col-lg-4 col-xl-4 offset-lg-2 premag-xl-margin-top-120 premag-links-rapidos">
                 <h4>Links rápidos</h4>
                 <div class="premag-deco-retangulo premag-deco-retangulo-50 premag-height-1x"></div>
 
-                <ul class="premag-ul premag-margin-top-12 premag-color-06">
+                <ul class="premag-ul premag-xl-margin-top-12 premag-color-06">
                     <li class=""><a href="home" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Home</a></li>
                     <li class=""><a href="fabrica" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">A Fábrica</a></li>
                     <li class=""><a href="produtos-e-servicos" class="link-offset-2 link-offset-3-hover link-underline link-underline-opacity-0 link-underline-opacity-75-hover color-c8">Produtos e Serviços</a></li>
