--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="premag-header background-color-c14" id="premag-header">
+<div class="premag-header background-color-c14 w-100" id="premag-header">
     <div class="container">
         <nav class="navbar fixed-top background-color-c14 navbar-expand-lg">
             <div class="container-fluid">
