--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -1,4 +1,4 @@
-<div class="obras" id="obras">
+<div class="obras premag-xl-margin-top-48" id="obras">
     <div class="premag-obras-banner">
         <div class="container">
             <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
