--- a/src/app/pages/products/products.component.html
+++ b/src/app/pages/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="products" id="products">
+<div class="products premag-xl-margin-top-48" id="products">
     <div class="premag-product-banner">
         <div class="container">
             <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
@@ -7,8 +7,8 @@
     <div class="premag-product-content background-color-c12 d-flex flex-row align-items-start">
         <h1 class="premag-page-title color-c11 text-uppercase premag-secondary-font d-flex justify-content-start align-items-center">Produtos e Serviços</h1>
         <div class="container premag-product-container premag-padding-top-80 premag-padding-bottom-80">
-            <div class="container premag-product-item premag-margin-bottom-40">
-                <div class="row premag-margin-top-40">
+            <div class="container premag-product-item premag-xl-margin-bottom-40">
+                <div class="row premag-xl-margin-top-40">
                     <div class="col-lg-3 col-xs-12 col-3-l">
                         <img src="../../../assets/images/thumb-ponte.png" alt="Foto de uma ponte fabricada pela Premag">
                     </div>
@@ -17,7 +17,7 @@
                         <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
                     </div>
                 </div>
-                <div class="row premag-margin-top-40">
+                <div class="row premag-xl-margin-top-40">
                     <div class="col-lg-9 col-xs-12 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40 col-9-l">
                         <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Galerias</h2>
                         <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
@@ -26,7 +26,7 @@
                         <img src="../../../assets/images/thumb-galeria.png" alt="Foto de uma galeria da Premag">
                     </div>
                 </div>
-                <div class="row premag-margin-top-40">
+                <div class="row premag-xl-margin-top-40">
                     <div class="col-lg-3 col-xs-12 col-3-l">
                         <img src="../../../assets/images/thumb-viaduto.png" alt="Foto de um viaduto fabricado pela Premag">
                     </div>
@@ -35,7 +35,7 @@
                         <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
                     </div>
                 </div>
-                <div class="row premag-margin-top-40">
+                <div class="row premag-xl-margin-top-40">
                     <div class="col-lg-9 col-xs-12 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40 col-9-l">
                         <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Edificações</h2>
                         <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
@@ -44,7 +44,7 @@
                         <img src="../../../assets/images/thumb-edificacoes.png" alt="Foto de uma edificação fabricada pela Premag">
                     </div>
                 </div>
-                <div class="row premag-margin-top-40">
+                <div class="row premag-xl-margin-top-40">
                     <div class="col-lg-3 col-xs-12 col-3-l">
                         <img src="../../../assets/images/thumb-passarelas.png" alt="Foto de uma passarela fabricada pela Premag">
                     </div>
@@ -53,7 +53,7 @@
                         <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
                     </div>
                 </div>
-                <div class="row premag-margin-top-40">
+                <div class="row premag-xl-margin-top-40">
                     <div class="col-lg-9 col-xs-12 background-premag-color-04 premag-color-09 premag-padding-top-40 premag-padding-bottom-40 premag-padding-right-40 premag-padding-left-40 col-9-l">
                         <h2 class="text-uppercase premag-font-36 premag-font-weight-600 premag-secondary-font">Mobiliário Urbano</h2>
                         <p>Satisfazem as exigências normais de qualquer rodovia; das vicinais às autoestradas, assegurando o tráfego de todo tipo de veículo.</p>
