--- a/src/app/elements/carousel/carousel.component.html
+++ b/src/app/elements/carousel/carousel.component.html
@@ -5,7 +5,7 @@
         <div class="col-md-3" [ngClass]="{'d-none d-md-block': cardIndex !== 0}"
               *ngFor="let card of item; let cardIndex = index">
           <div class="my-1 premag-carousel d-flex flex-column justify-content-center">
-            <img src={{card.img}} alt="Card image cap" class="premag-width-160 premag-margin-left-80 premag-margin-top-40">
+            <img src={{card.img}} alt="Card image cap" class="premag-width-160 premag-xl-margin-left-80 premag-xl-margin-top-40">
           </div>
         </div>
       </div>
