Aplicando breakpoints do Bootstrap

--- a/src/app/pages/tecnology/tecnology.component.html
+++ b/src/app/pages/tecnology/tecnology.component.html
@@ -1,7 +1,7 @@
 <div class="tecnologia premag-xl-margin-top-48" id="tecnologia">
     <div class="premag-tecnologia-banner">
         <div class="container">
-            <p class="premag-font-18 premag-color-01 premag-primary-font"></p>    
+            <p class="premag-font-18 premag-color-01 premag-font-raleway"></p>    
         </div>
     </div>
     <div class="w-100">
@@ -28,15 +28,15 @@
 
                     <div class="container premag-font-Raleway">
                         <div class="row">
-                            <div class="col-lg-3 col-xs-12 d-flex flex-row">
+                            <div class="col-lg-3 col-md-12 d-flex flex-row">
                                 <p class="premag-font-20 color-c6">Ensaios já foram executados na COPPE/UFRJ – Coordenação dos Programas de Pós-Graduação em Engenharia da Universidade Federal do Rio de Janeiro, com utilização de vigas protendidas <span class="premag-color-05">PREMAG</span>.</p>
                             </div>
-                            <div class="col-lg-5 col-xs-12 d-flex flex-row">
+                            <div class="col-lg-5 col-md-12 d-flex flex-row">
                                 <div class="premag-deco-retangulo-h-100 background-premag-color-05 premag-deco-retangulo-05"></div>
                                 <p class="premag-font-20 color-c6 premag-padding-right-40 premag-padding-left-40 premag-no-padding-col">Em 1998, foram testadas seis vigas <span class="premag-color-05">PREMAG</span> com Concreto de Alta Resistência (CAR), atingindo-se valores de até 60 MPa. Os resultados deste trabalho constam da tese de mestrado “Comportamento ao Cisalhamento de Vigas Protendidas”, COPPE, UFRJ, e dos Anais do 40º Reibrac realizado pelo IBRACON – Instituto Brasileiro do Concreto, no Rio de Janeiro, RJ, 1998.</p>
                                 <div class="premag-deco-retangulo-h-100 background-premag-color-05 premag-deco-retangulo-05"></div>
                             </div>
-                            <div class="col-lg-4 col-xs-12">
+                            <div class="col-lg-4 col-md-12">
                                 <p class="premag-font-20 color-c6 premag-padding-right-12 premag-padding-left-12 premag-no-padding-col">Em 2002 foram feitos estudos para avaliar o comportamento da ligação entre viga e laje pré-fabricadas produzidas pela <span class="premag-color-05">PREMAG</span>. Este trabalho contou com 14 (quatorze) ensaios de vigas com tamanho real e os resultados constam da tese de doutoramento “Comportamento da Ligação entre Lajes e Vigas Pré-fabricadas Feita com Nichos Preenchidos no Local”, COPPE/ UFRJ, e dos Anais das XXXI Jornadas Sud-Americanas de Ingeniería Estructural, Mendoza, Argentina, 2004.</p>
                             </div>
                         </div>
