--- a/src/app/pages/tecnology/tecnology.component.html
+++ b/src/app/pages/tecnology/tecnology.component.html
@@ -5,7 +5,7 @@
         </div>
     </div>
     <div class="w-100">
-        <div class="premag-tecnologia-content background-color-c12 d-flex flex-row align-items-start">
+        <div class="premag-tecnologia-content background-color-c12 d-flex flex-row align-items-start premag-lg-padding-top-120">
             <div class="col-xl-2 col-lg-2">
                 <h1 class="premag-page-title color-c11 text-uppercase premag-font-Kanit d-flex justify-content-end premag-xl-margin-top-200 align-items-center">Tecnologia</h1>
             </div>
