--- a/src/app/elements/counter/counter.component.html
+++ b/src/app/elements/counter/counter.component.html
@@ -1,17 +1,17 @@
-<div class="d-flex flex-row align-items-center justify-content-between premag-xl-margin-top-80 premag-xl-margin-bottom-80 premag-secondary-font">
-    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+<div class="premag-counter premag-secondary-font row">
+    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11 col-lg-6 col-xl">
         <p id="contadorPonte"><ngx-animated-counter [params]="paramsPontes"></ngx-animated-counter></p>
         <p>Pontes</p>
     </div>
-    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11 col-lg-6 col-xl">
         <p><ngx-animated-counter [params]="paramsViadutos"></ngx-animated-counter></p>
         <p>Viadutos</p>
     </div>
-    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11 col-lg-6 col-xl">
         <p><ngx-animated-counter [params]="paramsPassarelas"></ngx-animated-counter></p>
         <p>Passarelas</p>
     </div>
-    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11">
+    <div class="premag-secondary-font d-flex flex-column align-items-center justify-content-center fw-bold premag-numbers-itens color-c11 col-lg-6 col-xl-4">
         <p><ngx-animated-counter [params]="paramsObras"></ngx-animated-counter></p>
         <p>Obras Concluídas</p>
     </div>
