--- a/src/app/pages/factory/factory.component.html
+++ b/src/app/pages/factory/factory.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="factory premag-xl-margin-top-48" id="factory">
     <div class="w-100">
         <div class="premag-fabrica-banner">
@@ -52,3 +53,4 @@
         </div>
     </div>
 </div>
+<app-footer></app-footer>
