--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="premag-home" id="home">
     <div class="premag-banner">
         
@@ -45,3 +46,4 @@
     </div>
     
 </div>
+<app-footer></app-footer>
