--- a/src/app/elements/header/header.component.html
+++ b/src/app/elements/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="premag-header background-color-c14 w-100" id="premag-header">
     <div class="container">
-        <nav class="navbar fixed-top background-color-c14 navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg fixed-top background-color-c14">
             <div class="container-fluid">
               <span class="navbar-brand mb-0 h1"><a href="home"><img src="../../../assets/images/logo-premag-2.png" alt="Logo da Premag"></a></span>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" (click)="collapse()">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="navbar-collapse justify-content-end" [ngClass]="{'collapse':menucollapse}" id="navbarNav">
+              <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
                 <ul class="navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link color-c3" routerLink="/home" routerLinkActive="is-active">Home</a>
